--- a/474_Data_Cleaner.ipynb
+++ b/474_Data_Cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 365,
    "metadata": {
     "collapsed": true
    },
@@ -16,19 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 366,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#http://fiscal.wa.gov/salaries.aspx\n",
-    "df = pd.read_csv('data\\WA_SALARY_DATA.csv')"
+    "df = pd.read_csv('data\\WA_SALARY_DATA.csv', thousands=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 367,
    "metadata": {
     "collapsed": false
    },
@@ -60,8 +60,8 @@
        "      <td>FORMS &amp; RECORDS ANALYST 2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>32,272</td>\n",
-       "      <td>17,745</td>\n",
+       "      <td>32272</td>\n",
+       "      <td>17745</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -81,7 +81,7 @@
        "      <td>AUBREY, DONALD F.</td>\n",
        "      <td>BOARD MEMBER</td>\n",
        "      <td>0</td>\n",
-       "      <td>1,450</td>\n",
+       "      <td>1450</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -93,8 +93,8 @@
        "      <td>ADMINISTRATIVE TRAINEE 3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>15,182</td>\n",
-       "      <td>13,620</td>\n",
+       "      <td>15182</td>\n",
+       "      <td>13620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -105,29 +105,29 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>20,750</td>\n",
+       "      <td>20750</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Agy Agency_Title       employee_name                  job_title Sal2011  \\\n",
-       "0  165  Accountancy       ASMATH, MOSAR  FORMS & RECORDS ANALYST 2       0   \n",
-       "1  165  Accountancy    AUBREY, DONALD F               BOARD MEMBER     950   \n",
-       "2  165  Accountancy   AUBREY, DONALD F.               BOARD MEMBER       0   \n",
-       "3  165  Accountancy  DONOVAN, KIRSTEN M   ADMINISTRATIVE TRAINEE 3       0   \n",
-       "4  165  Accountancy  DONOVAN, KIRSTEN M          LEGAL SECRETARY 2       0   \n",
+       "   Agy Agency_Title       employee_name                  job_title  Sal2011  \\\n",
+       "0  165  Accountancy       ASMATH, MOSAR  FORMS & RECORDS ANALYST 2        0   \n",
+       "1  165  Accountancy    AUBREY, DONALD F               BOARD MEMBER      950   \n",
+       "2  165  Accountancy   AUBREY, DONALD F.               BOARD MEMBER        0   \n",
+       "3  165  Accountancy  DONOVAN, KIRSTEN M   ADMINISTRATIVE TRAINEE 3        0   \n",
+       "4  165  Accountancy  DONOVAN, KIRSTEN M          LEGAL SECRETARY 2        0   \n",
        "\n",
-       "  Sal2012 Sal2013 Sal2014  \n",
-       "0       0  32,272  17,745  \n",
-       "1       0       0     400  \n",
-       "2   1,450       0       0  \n",
-       "3       0  15,182  13,620  \n",
-       "4       0       0  20,750  "
+       "   Sal2012  Sal2013  Sal2014  \n",
+       "0        0    32272    17745  \n",
+       "1        0        0      400  \n",
+       "2     1450        0        0  \n",
+       "3        0    15182    13620  \n",
+       "4        0        0    20750  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 368,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 369,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -171,7 +171,7 @@
        "Name: Agency_Title, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 370,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 371,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 372,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +245,7 @@
        " 'Yakima Valley College'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 373,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +271,7 @@
        " 'Western Washington University'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 381,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Central Washington University\n",
+      "32\n",
+      "Western Washington University\n",
+      "453\n",
+      "University of Washington\n",
+      "970\n",
+      "Washington State University\n",
+      "131\n",
+      "Eastern Washington University\n",
+      "38\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in univ_set:\n",
+    "    print(item)\n",
+    "    tempdf = df[df.Agency_Title == item]\n",
+    "    tempdf = tempdf[tempdf.job_title.str.contains(\"PROFESSOR\")]\n",
+    "    fortyk = tempdf[tempdf.Sal2011 <= 40000]\n",
+    "    fortyk = fortyk[fortyk.Sal2011 >= 1]\n",
+    "    print(len(fortyk))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sal2011\n",
+      "Central Washington University\n",
+      "32\n",
+      "230\n",
+      "109\n",
+      "15\n",
+      "1\n",
+      "Western Washington University\n",
+      "453\n",
+      "263\n",
+      "58\n",
+      "1\n",
+      "0\n",
+      "University of Washington\n",
+      "970\n",
+      "1054\n",
+      "1283\n",
+      "755\n",
+      "701\n",
+      "Washington State University\n",
+      "131\n",
+      "492\n",
+      "382\n",
+      "131\n",
+      "66\n",
+      "Eastern Washington University\n",
+      "38\n",
+      "244\n",
+      "47\n",
+      "1\n",
+      "0\n",
+      "Sal2012\n",
+      "Central Washington University\n",
+      "27\n",
+      "225\n",
+      "94\n",
+      "10\n",
+      "2\n",
+      "Western Washington University\n",
+      "225\n",
+      "292\n",
+      "85\n",
+      "5\n",
+      "0\n",
+      "University of Washington\n",
+      "988\n",
+      "1010\n",
+      "1292\n",
+      "787\n",
+      "753\n",
+      "Washington State University\n",
+      "154\n",
+      "465\n",
+      "395\n",
+      "132\n",
+      "82\n",
+      "Eastern Washington University\n",
+      "48\n",
+      "231\n",
+      "54\n",
+      "1\n",
+      "0\n",
+      "Sal2013\n",
+      "Central Washington University\n",
+      "36\n",
+      "212\n",
+      "129\n",
+      "19\n",
+      "1\n",
+      "Western Washington University\n",
+      "126\n",
+      "309\n",
+      "125\n",
+      "5\n",
+      "0\n",
+      "University of Washington\n",
+      "1016\n",
+      "1024\n",
+      "1300\n",
+      "818\n",
+      "847\n",
+      "Washington State University\n",
+      "159\n",
+      "496\n",
+      "401\n",
+      "124\n",
+      "88\n",
+      "Eastern Washington University\n",
+      "62\n",
+      "228\n",
+      "64\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item1 in ['Sal2011', 'Sal2012', 'Sal2013']:\n",
+    "    print(item1)\n",
+    "    for item in univ_set:\n",
+    "        tempdf = df[df.Agency_Title == item]\n",
+    "        tempdf = tempdf[tempdf.job_title.str.contains(\"PROFESSOR\")]\n",
+    "        print(item)\n",
+    "        fortyk = tempdf[tempdf[item1] <= 40000]\n",
+    "        fortyk = fortyk[fortyk[item1] >= 1]\n",
+    "        #print('1 - 40k')\n",
+    "        print(len(fortyk))\n",
+    "        eightyk = tempdf[tempdf[item1] <= 80000]\n",
+    "        eightyk = eightyk[eightyk[item1] > 40000]\n",
+    "        #print('40k - 80k')\n",
+    "        print(len(eightyk))\n",
+    "        hundtwentyk = tempdf[tempdf[item1] <= 120000]\n",
+    "        hundtwentyk = hundtwentyk[hundtwentyk[item1] > 80000]\n",
+    "        #print('80k - 120k')\n",
+    "        print(len(hundtwentyk))\n",
+    "        greater120 = tempdf[tempdf[item1] <= 160000]\n",
+    "        greater120 = greater120[greater120[item1] > 120000]\n",
+    "        print(len(greater120))\n",
+    "        greater160 = tempdf[tempdf[item1] > 160000]\n",
+    "        #print('120k+')\n",
+    "        print(len(greater160))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -330,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -343,136 +511,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Central Washington University',\n",
-       " 'Western Washington University',\n",
-       " 'Olympic College',\n",
-       " 'Lake Washington Technical College',\n",
-       " 'Whatcom Community College',\n",
-       " 'Walla Walla Community College',\n",
-       " 'Spokane Community College',\n",
-       " 'Clark College',\n",
-       " 'Wenatchee Valley College',\n",
-       " 'Washington State University',\n",
-       " 'Edmonds Community College',\n",
-       " 'Big Bend Community College',\n",
-       " 'Grays Harbor College',\n",
-       " 'Green River Community College',\n",
-       " 'Pierce Community College',\n",
-       " 'Lower Columbia Community College',\n",
-       " 'Peninsula Community College',\n",
-       " 'Eastern Washington University',\n",
-       " 'Everett Community College',\n",
-       " 'South Puget Sound Community College',\n",
-       " 'The Evergreen State College',\n",
-       " 'Bates Technical College',\n",
-       " 'Bellingham Technical College',\n",
-       " 'Shoreline Community College',\n",
-       " 'Tacoma Community College',\n",
-       " 'University of Washington',\n",
-       " 'Highline Community College',\n",
-       " 'Bellevue Community College',\n",
-       " 'Skagit Valley College',\n",
-       " 'Seattle Community College',\n",
-       " 'Clover Park Technical College',\n",
-       " 'Columbia Basin Community College',\n",
-       " 'Cascadia Community College',\n",
-       " 'Renton Technical College',\n",
-       " 'Centralia College',\n",
-       " 'Yakima Valley College']"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "school_list2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "csv = df[df.Agency_Title.isin(school_list2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "csv.to_csv('professordata.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df2.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "prof_df = df2[df2.job_title.str.contains(\"PROFESSOR\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "prof_df.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(prof_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "zero = prof_df[prof_df.Sal2011 == 0]\n",
+    "len(zero) /7328.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df2 = df[df.Agency_Title == 'University of Washington']"
+    "fortyk = prof_df[prof_df.Sal2011 <= 40000]\n",
+    "fortyk = fortyk[fortyk.Sal2011 >= 1]\n",
+    "\n",
+    "eightyk = prof_df[prof_df.Sal2011 <= 80000]\n",
+    "eightyk = eightyk[eightyk.Sal2011 > 40000]\n",
+    "\n",
+    "hundtwentyk = prof_df[prof_df.Sal2011 <= 120000]\n",
+    "hundtwentyk = hundtwentyk[hundtwentyk.Sal2011 > 80000]\n",
+    "\n",
+    "greater120 = prof_df[prof_df.Sal2011 <= 160000]\n",
+    "greater120 = greater120[greater120.Sal2011 > 120000]\n",
+    "\n",
+    "greater160 = prof_df[prof_df.Sal2011 > 160000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['DIETARY UNIT AIDE', 'FOOD SERVICE WORKER', 'REGISTERED NURSE 2',\n",
-       "       'STIPEND GRAD FELLOW - A', 'ACADEMIC COUNSELOR - SENIOR',\n",
-       "       'RESEARCH SCIENTIST/ENGINEER 4', 'UWRP RETIREE - NON-EXEMPT WORK',\n",
-       "       'REGISTERED NURSE 2', 'DIRECTOR', 'REGISTERED NURSE 2',\n",
-       "       'CLINICAL LABORATORY TECHNICIAN 1', 'ADMINISTRATIVE COORDINATOR',\n",
-       "       'HUMAN RESOURCES DEPT MGR/ADMIN', 'TEMPORARY STAFF A',\n",
-       "       'REGISTERED NURSE 3', 'MANAGER OF PROGRAM OPERATIONS', 'LIBRARIAN',\n",
-       "       'ASSOCIATE DEAN', 'SENIOR LECTURER-FULL TIME',\n",
-       "       'ACTING ASSISTANT PROFESSOR-TEMP', 'CHIEF RESIDENT', 'FELLOW',\n",
-       "       'RESIDENT', 'ORTHOPAEDIC TECHNICIAN II',\n",
-       "       'LIMITED TERM APPOINTMENT - PROF STAFF',\n",
-       "       'CONTACT CENTER REPRESENTATIVE 1', 'PATIENT SERVICES REP',\n",
-       "       'STIPEND GRAD FELLOW - A', 'STIPEND GRAD FELLOW - B',\n",
-       "       'AFFILIATE INSTRUCTOR', 'LECTURER PART-TIME',\n",
-       "       'CONTINUING EDUCATION SPECIALIST 3', 'FDA SEIU - PROJECT',\n",
-       "       'RESEARCH STUDY COORDINATOR 1', 'RESEARCH STUDY COORDINATOR 2',\n",
-       "       'STIPEND OTH TRAINEE', 'STIPEND OTH TRAINEE',\n",
-       "       'PHYS ASST-ADV RN PRACTITIONER',\n",
-       "       'FEE BASED ASSIGNMENT - PROF STAFF',\n",
-       "       'LIMITED TERM APPOINTMENT - PROF STAFF', 'OFFICE ASSISTANT 1',\n",
-       "       'DIRECTOR', 'COMPUTER OPERATOR 1', 'PROGRAM ASSISTANT',\n",
-       "       'PROGRAM COORDINATOR', 'HOSPITAL ASSISTANT',\n",
-       "       'ADMINISTRATIVE COORDINATOR', 'COMPUTER OPERATOR 1',\n",
-       "       'PHARMACY TECHNICIAN 1', 'REGISTERED NURSE 2',\n",
-       "       'STIPEND UGRD G & AID', 'STIPEND OTH TRAINEE', 'REGISTERED NURSE 2',\n",
-       "       'CUSTODIAN', 'REGISTERED NURSE 2', 'FDA SEIU - PROJECT',\n",
-       "       'FISCAL SPECIALIST 1', 'FISCAL SPECIALIST 2', 'RESIDENT', 'FELLOW',\n",
-       "       'PHARMACIST 2', 'PHARMACIST 3', 'STIPEND OTH TRAINEE', 'RESIDENT',\n",
-       "       'CUSTODIAN', 'EXTENSION LECTURER', 'LECTURER PART-TIME',\n",
-       "       'PROJECT APPOINTMENT - OVERTIME EXEMPT',\n",
-       "       'TECHNOLOGY PROJECT MANAGER', 'STIPEND OTH TRAINEE', 'RESIDENT',\n",
-       "       'ASST PROFESSOR WITHOUT TENURE', 'SENIOR FELLOW',\n",
-       "       'REGISTERED NURSE 2', 'TECHNOLOGY MANAGER', 'EDUCATOR 1',\n",
-       "       'MASON/PLASTERER', 'SECRETARY SENIOR',\n",
-       "       'PROJECT APPOINTMENT - OVERTIME COVERED',\n",
-       "       'PROJECT APPOINTMENT - OVERTIME EXEMPT', 'TEMPORARY STAFF A',\n",
-       "       'PATIENT FINANCIAL SERVICES SPECIALIST 2', 'PROFESSOR',\n",
-       "       'CLINICAL ASSOCIATE PROFESSOR',\n",
-       "       'CLINICAL ASSOCIATE PROFESSOR-SALARIED', 'LECTURER PART-TIME',\n",
-       "       'HOSPITAL ASSISTANT', 'HOSPITAL ASSISTANT', 'RESEARCH COORDINATOR',\n",
-       "       'ASSOCIATE PROFESSOR', 'STIPEND UGRD G & AID', 'IT SPECIALIST 2',\n",
-       "       'HOSPITAL ASSISTANT', 'STIPEND UNDERGRADUATE FELLOW',\n",
-       "       'STIPEND UNDERGRADUATE TRAINEE', 'HRP PROJECT APPOINTMENT',\n",
-       "       'DENTAL ASSISTANT 2', 'HOSPITAL CENTRAL SERVICES TECHNICIAN 1',\n",
-       "       'PATIENT SERVICES SPECIALIST 1-TRAINEE', 'FDA SEIU - PROJECT'], dtype=object)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df2.job_title.values[0:100]"
+    "fortyk = prof_df[prof_df.Sal2011 <= 40000]\n",
+    "fortyk = fortyk[fortyk.Sal2011 >= 1]\n",
+    "len(fortyk)/7328.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "eightyk = prof_df[prof_df.Sal2011 <= 80000]\n",
+    "eightyk = eightyk[eightyk.Sal2011 > 40000]\n",
+    "len(eightyk)/7328.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "hundtwentyk = prof_df[prof_df.Sal2011 <= 120000]\n",
+    "hundtwentyk = hundtwentyk[hundtwentyk.Sal2011 > 80000]\n",
+    "len(hundtwentyk)/7328.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "greater120 = prof_df[prof_df.Sal2011 <= 160000]\n",
+    "greater120 = greater120[greater120.Sal2011 > 120000]\n",
+    "len(greater120)/7328.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "greater160 = prof_df[prof_df.Sal2011 > 160000]\n",
+    "len(greater160)/7328.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(zero) + len(fortyk) + len(eightyk) + len(hundtwentyk) + len(greater120) + len(greater160)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "csv2 = csv[csv.Agency_Title ]\n",
+    "csv2 = csv.Sal2011.sort_values(ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "csv2"
    ]
   }
  ],
