--- a/LANDOWSKI_TIMOTHY_INFO371-PS4.ipynb
+++ b/LANDOWSKI_TIMOTHY_INFO371-PS4.ipynb
@@ -158,7 +158,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Enter your observations here*"
+    "*Enter your observations here*\n",
+    "\n",
+    "The equation for regressing housing prices on number of rooms is -34.67 + 9.1(Rooms)\n",
+    "\n",
+    "The equation for regressing housing prices on number of rooms and number of rooms squared is 66.06 - 22.64(rooms) + 2.47(rooms^2)\n",
+    "\n",
+    "These equations show that most neighborhoods have more than 4 rooms per house on average "
    ]
   },
   {
@@ -579,7 +585,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Enter your observations here*"
+    "*Enter your observations here*\n",
+    "\n",
+    "The pink line represents the slope coefficent from the previous question. As you can see from this graph, most of the points from the cross validation exists before the pink line with the majority of the lines being between 9.0 and 9.1. The shape of the histogram is the general shape of a normal curve."
    ]
   },
   {
@@ -791,7 +799,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Enter your observations here*"
+    "*Enter your observations here*\n",
+    "\n",
+    "WHen the learning rate is lower, it takes more iterations but it generally always converges. When the learning rate is higher it takes much less iterations but there is a chance that if the learning rate gets too high that the there will not be a convergence within the number of designated max iterations.\n",
+    "\n",
+    "More iterations have slower processing and vice versa.\n",
+    "\n",
+    "The alpha and beta values tend to be within a very small range of each other (+-2)"
    ]
   },
   {
@@ -968,7 +982,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Enter your observations here*"
+    "*Enter your observations here*\n",
+    "\n",
+    "The number of iterations decrease heavily between .001 and 5 for learning rate (from 10,139 to 9 iterations). Time is shorter with higher learning rates and less iterations. The coefficients are very very similar to each other."
    ]
   },
   {
@@ -1048,6 +1064,15 @@
     "print multivariate_ols(bdata_train[:,(0,5)], btarget_train, R=0.01, MaxIterations=1000000, norm=False)\n",
     "\n",
     "print multivariate_ols(bdata_train[:,(0,5)], btarget_train, R=0.1, MaxIterations=1000000, norm=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I set the iteration limit very high for these calculations. For normalized data the number of iterations are much less than un-normalized data. The time required is also reduced significantly when normalizing the data (15 seconds to .3 seconds)\n",
+    "\n",
+    "When using non standard data there was an occurrence for .1 Learning rate that resulted in the lack of convergence for the data."
    ]
   },
   {
@@ -1153,7 +1178,8 @@
    "cell_type": "code",
    "execution_count": 654,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1182,7 +1208,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Discuss your results here*"
+    "*Discuss your results here*\n",
+    "\n",
+    "How do your estimated coefficients from cross-validation compare to the ones you estimated in 2.3 above? How do they compare to the ones estimated using standard packages?\n",
+    "\n",
+    "cross validation:  22.97 - 2.214 * CRIM + 6.024 * RM\n",
+    "\n",
+    "2.3:               22.97 - 2.198 * CRIM + 6.037 * RM\n",
+    "\n",
+    "standard packages: 22.97 - 2.198 * CRIM + 6.037 * RM\n",
+    "\n",
+    "They have the same intercept and very small differences in the CRIM and RM parameters for the equations"
    ]
   },
   {
@@ -1315,7 +1351,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Discuss your results here*"
+    "*Discuss your results here*\n",
+    "\n",
+    "The average RMSE for this was 4.98 which was considerably lower than my RMSE from the nearest neighbor dataset by around half. The speed for this calculation was also much faster than the nearest neighbor problem set."
    ]
   },
   {
@@ -1730,10 +1768,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'multivariate_ols' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-acf76798e1c7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#FOR EARLIER\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# Your code here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mint_coef2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mslope_coef2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmultivariate_ols\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mR\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMaxIterations\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnorm\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint_coef2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'multivariate_ols' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#FOR EARLIER \n",
+    "# Your code here\n",
+    "int_coef2, slope_coef2 = multivariate_ols(data_train[:,(0,5)], target_train, R=0.1, MaxIterations=100000, norm=True)\n",
+    "\n",
+    "print(int_coef2)\n",
+    "print(slope_coef2)\n",
+    "\n",
+    "rows = data_train[:,(0,5)].shape[0] #number of row\n",
+    "print rows\n",
+    "cols = data_train[:,(0,5)].shape[1] #number of features\n",
+    "print cols\n",
+    "\n",
+    "train_arr = []\n",
+    "test_arr = []\n",
+    "\n",
+    "#train \n",
+    "for index in range(rows):\n",
+    "    temp = np.sum(slope_coef2[i] * data_train[index,i] for i in range(cols))\n",
+    "    train_arr.append(int_coef2 + temp)\n",
+    "    \n",
+    "#test\n",
+    "for index in range(len(data_test)):\n",
+    "    temp = np.sum(slope_coef2[i] * data_test[index,i] for i in range(cols))\n",
+    "    test_arr.append(int_coef2 + temp)\n",
+    "    \n",
+    "print 'Training RMSE: ', compute_rmse(train_arr, target_train) \n",
+    "print 'Testing RMSE: ', compute_rmse(test_arr, target_test) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Discuss your results here*"
+    "*Discuss your results here*\n",
+    "\n",
+    "The RMSE for the training set is lower than the RMSE for the testing set. This makes sense because the model would better reflect the training set and cause it to have a lower RMSE. \n",
+    "\n",
+    "The RMSE (~17) for this part is generally higher than the RMSE from the nearest neighbors dataset.\n",
+    "\n",
+    "The RMSE for this is ______ when compared to the rmse from problem 2"
    ]
   },
   {
